<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2019 xuexiangjys(xuexiangjys@163.com)
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~       http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  ~
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/item_dashboard"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/nav_dashboard" />

    <item
        android:id="@+id/item_photo"
        android:icon="@drawable/ic_photo_black_24dp"
        android:title="@string/nav_photo" />

    <item
        android:id="@+id/item_music"
        android:icon="@drawable/ic_music_note_black_24dp"
        android:title="@string/nav_music" />

    <item
        android:id="@+id/item_movie"
        android:icon="@drawable/ic_movie_black_24dp"
        android:title="@string/nav_movie" />
</menu>
