<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (C) 2022 xuexiangjys(xuexiangjys@163.com)
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~       http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  ~
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.xuexiang.xui.widget.textview.ReadMoreTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lorem_ipsum1"
        app:rmtv_trimCollapsedText="@string/show_all_content" />

    <com.xuexiang.xui.widget.textview.ReadMoreTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_16"
        android:text="@string/lorem_ipsum1"
        app:rmtv_ellipsize="****"
        app:rmtv_trimCollapsedText="@string/show_all_content"
        app:rmtv_trimLines="3" />

    <com.xuexiang.xui.widget.textview.ReadMoreTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_16"
        android:text="@string/lorem_ipsum2"
        app:rmtv_colorClickableText="@color/app_color_theme_1" />

    <com.xuexiang.xui.widget.textview.ReadMoreTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_16"
        android:text="@string/lorem_ipsum3"
        app:rmtv_showTrimExpandedText="false"
        app:rmtv_trimLength="100" />

    <com.xuexiang.xui.widget.textview.ReadMoreTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_16"
        android:text="@string/one_line_text" />


</LinearLayout>