<?xml version="1.0" encoding="utf-8"?>
<!--
    Copyright (C) 2016 The Android Open Source Project
    Licensed under the Apache License, Version 2.0 (the "License");
    you may not use this file except in compliance with the License.
    You may obtain a copy of the License at
         http://www.apache.org/licenses/LICENSE-2.0
    Unless required by applicable law or agreed to in writing, software
    distributed under the License is distributed on an "AS IS" BASIS,
    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    See the License for the specific language governing permissions and
    limitations under the License.
-->
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/aspect_ratio"
        android:icon="@drawable/ic_aspect_ratio"
        android:title="@string/aspect_ratio"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/switch_flash"
        android:icon="@drawable/ic_flash_auto"
        android:title="@string/flash_auto"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/switch_camera"
        android:icon="@drawable/ic_switch_camera"
        android:title="@string/switch_camera"
        app:showAsAction="ifRoom"/>

</menu>
