<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (C) 2018 xuexiangjys(xuexiangjys@163.com)
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~        http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <Button
        android:id="@+id/button"
        style="@style/Button.Blue.wrap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_marginTop="10dip"
        android:text="@string/pick_photo" />

    <Button
        android:id="@+id/button_no_camera"
        style="@style/Button.Blue.wrap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:text="@string/pick_photo_without_camera" />

    <Button
        android:id="@+id/button_one_photo"
        style="@style/Button.Blue.wrap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:text="@string/pick_one_photo" />

    <Button
        android:id="@+id/button_photo_gif"
        style="@style/Button.Blue.wrap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:text="@string/pick_photo_gif" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_marginTop="?attr/xui_config_content_spacing_horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>
